tests/sksl/errors/RedeclareUserType.glsl
### Compilation failed:

error: 2: symbol 'S' was already defined
1 error
